Modified some stuff

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,3 +113,11 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+
+@masterthesis{ChristieAgbalessi,
+  bibtex_show={true},
+  title={Design of an 8-bit Configurable CNN Hardware Accelerator for Audio and Image Classification},
+  author={Christie Agbalessi},
+  year={2022},
+  url={https://repository.rit.edu/theses/11244/}
+}
